--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Sprint0 Laura</string>
+    <string name="app_name">Pollution Tracker</string>
 </resources>
