--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Pollution Tracker</string>
+    <string name="open">Open navegation drawer</string>
+    <string name="close">Close navegation drawer</string>
+
+
 </resources>
